using the new(jdk16) Math.clamp as a cleaner calc of boundaries